<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/lightblue">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lightblue">

        <TextView
            android:text="@string/headertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/headerfontsize"/>

        <Button
            android:id="@+id/appbutton1"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <Button
            android:id="@+id/appbutton2"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton2"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <Button
            android:id="@+id/appbutton3"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton3"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <Button
            android:id="@+id/appbutton4"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton4"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <Button
            android:id="@+id/appbutton5"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton5"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <Button
            android:id="@+id/appbutton6"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/appbutton6"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/red"/>

    </LinearLayout>

</RelativeLayout>